Fix screen responsiveness to prevent excessive space under home page images on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,6 +259,7 @@ footer {
     .column-33,
     .review-33 {
         width: 100%;
+        min-height: auto;
         text-align: center;
     }
 }
